# AI4Stock2

./: .gitignore  Cargo.toml  README.md  build.rs  main.py  pixi.toml  pyproject.toml  run_build_prefiltered_profile.py  run_build_robust_factor_profile.py  run_candidate_pool_diagnostics.py  run_experiment_batch.py  run_full_space_single_factor_diagnostics.py  run_lgbm_backtest_artifacts.py  run_native_rolling.py  run_quality_event_flow_single_factor_batch.py  run_rolling.py  run_single_factor_diagnostics.py  run_single_factor_diagnostics_batch.py  run_strategy_pair_diagnostics.py  test_native_pipeline.py
.cargo/: config.toml
configs/: config.yaml  config_baseline.yaml  experiment_profiles.yaml  feature_profiles.yaml  model_presets.yaml  model_profiles.yaml
docs/: AI_CONTEXT_MAP.md  CONFIG_PROFILE_ARCHITECTURE.md  DEQLIB_MIGRATION_PLAN.md  NATIVE_ALIGNMENT_NOTES.md  PARQUET_FACTOR_STORE_DESIGN.md  PROGRESS_AND_TODO.md  USER_GUIDE.md
examples/: candidate_profile.example.json  factor_expression_profile.example.yaml
src/: alpha_definitions.py  alpha_feature_values.py  backtest.py  backtest_controls.py  backtest_engine.py  backtest_report.py  backtest_scoring.py  backtest_trace.py  build_universes.py  candidate_diagnostics.py  candidate_profiles.py  collector_akshare.py  collector_gm.py  collector_io.py  collector_tushare.py  config_loader.py  config_utils.py  config_validation.py  data_setup.py  data_source.py  dataset.py  dataset_from_parquet.py  evaluate.py  experiment_profiles.py  experiment_store.py  factor_store.py  feature_engine_parity.py  feature_name_registry.py  feature_prefilter.py  feature_profiles.py  feature_selection.py  feature_value_core.py  features.py  gen_feature.py  industry_groups.py  label_utils.py  model_config.py  model_profiles.py  native_backtest.py  native_universe.py  (+23 more)
src_rust/: common.rs  engine.rs  factor_kernels.rs  feature_kernels.rs  feature_prefilter.rs  gen_feature.rs  lib.rs  single_factor_diagnostics.rs
tests/: reference_backtest.py  test_backtest_report.py  test_backtest_trace.py  test_backtest_wrapper.py  test_build_universes.py  test_candidate_pool_wrapper.py  test_candidate_profiles.py  test_collector_akshare.py  test_collector_gm.py  test_collector_io.py  test_collector_tushare.py  (+39 more)
(+62 files in other folders)
