[package]
name = "ai4stock2_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai4stock2_native"
path = "src_rust/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "ai4stock-backtest"
path = "src_rust/bin/ai4stock_backtest.rs"

[[bin]]
name = "ai4stock-gen-feature"
path = "src_rust/bin/ai4stock_gen_feature.rs"

[[bin]]
name = "ai4stock-diagnostics"
path = "src_rust/bin/ai4stock_diagnostics.rs"

[[bin]]
name = "ai4stock-train"
path = "src_rust/bin/ai4stock_train.rs"

[dependencies]
arrow-array = "56"
arrow-schema = "56"
chrono = "0.4"
csv = "1.3"
parquet = { version = "56", features = ["arrow"] }
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[profile.release]
codegen-units = 1
lto = "thin"
