[package]
name = "ai4stock2_native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai4stock-backtest"
path = "rust/bin/ai4stock_backtest.rs"

[dependencies]
arrow-array = "56"
chrono = "0.4"
csv = "1.3"
parquet = { version = "56", features = ["arrow"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[profile.release]
codegen-units = 1
lto = "thin"
