[project]
name = "ai4stock2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.30",
    "catboost>=1.2.10",
    "curl-cffi>=0.14.0",
    "lightgbm>=4.6.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "pyqlib>=0.9.7",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
